[workspace]
package.authors = ["Luca Goslar <luca@zugriff.eu>"]
members = ["crates/zugriff"]
resolver = "2"

[workspace.dependencies]
actix-web = "= 4.11.0"
tokio = "= 1.45.1"
awc = "= 3.7.0"
clap = "= 4.5.40"
which = "= 8.0.0"
indicatif = "= 0.17.11"
dialoguer = "= 0.11.0"
strum = "= 0.27.1"
strum_macros = "= 0.27.1"
tempfile = "= 3.20.0"
tar = "= 0.4.44"
flate2 = "= 1.1.2"
directories = "= 6.0.0"
path-absolutize = "= 3.1.1"
once_cell = "1.17.2"
regex = "= 1.11.1"
hotwatch = "= 0.5.0"
zip = "= 3.0.0"
serde_json = "= 1.0.140"
serde = "= 1.0.219"
dotenvy = "= 0.15.7"
url = "= 2.5.4"
futures = "= 0.3.31"
bytes = "= 1.10.1"
bincode = "= 2.0.1"
serde-envfile = "= 0.3.0"
env_logger = "= 0.11.8"
log = "= 0.4.27"
garde = "= 0.22.0"
size = "= 0.5.0"
colored = "= 3.0.0"
anyhow = "= 1.0.98"
fs_extra = "= 1.3.0"
symlink = { git = "https://gitlab.com/chris-morgan/symlink.git", version = "= 0.1.0", rev = "dcc8849be3e8599c398361a487d22829307bef14" }
serde_with = "= 3.13.0"
async-signal = "= 0.2.11"
signal-hook = "= 0.3.18"
sha3 = "= 0.10.8"
base64 = "= 0.22.1"
typed-path = "= 0.11.0"