[workspace]
package.authors = ["Luca Goslar <luca@zugriff.eu>"]
members = ["crates/zugriff"]
resolver = "2"

[workspace.dependencies]
actix-web = "= 4.12.1"
tokio = "= 1.49.0"
awc = "= 3.8.1"
clap = "= 4.5.57"
which = "= 8.0.0"
indicatif = "= 0.18.3"
dialoguer = "= 0.12.0"
strum = "= 0.27.2"
strum_macros = "= 0.27.2"
tempfile = "= 3.24.0"
tar = "= 0.4.44"
flate2 = "= 1.1.9"
directories = "= 6.0.0"
path-absolutize = "= 3.1.1"
once_cell = "1.21.3"
regex = "= 1.12.3"
hotwatch = "= 0.5.0"
zip = "= 7.4.0"
serde_json = "= 1.0.149"
serde = "= 1.0.228"
dotenvy = "= 0.15.7"
url = "= 2.5.8"
futures = "= 0.3.31"
bytes = "= 1.11.1"
bincode = "= 2.0.1"
serde-envfile = "= 0.3.0"
env_logger = "= 0.11.8"
log = "= 0.4.29"
garde = "= 0.22.1"
size = "= 0.5.0"
colored = "= 3.1.1"
anyhow = "= 1.0.101"
fs_extra = "= 1.3.0"
symlink = { git = "https://gitlab.com/chris-morgan/symlink.git", version = "= 0.1.0", rev = "dcc8849be3e8599c398361a487d22829307bef14" }
serde_with = "= 3.16.1"
async-signal = "= 0.2.13"
signal-hook = "= 0.4.3"
typed-path = "= 0.12.2"
